# Calculator-GTK

./: README.md  meson.build  org.gnome.Calculator_Gtk.json
data/: meson.build  org.gnome.Calculator_Gtk.appdata.xml.in  org.gnome.Calculator_Gtk.desktop.in  org.gnome.Calculator_Gtk.gschema.xml
po/: POTFILES  meson.build
src/: calculator_gtk-window.c  calculator_gtk-window.h  calculator_gtk-window.ui  calculator_gtk.gresource.xml  main.c  meson.build
